--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,9 +18,9 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">RIVERS</a>
+            <a href="page2.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="page2.html">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
         
 
