--- a/mysiteplan/site-plan.html
+++ b/mysiteplan/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="page2.html">Subespecialists</a>
+        <a href="page3.html">Contact</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Subespecialists <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          contact  <!-- change this -->
         </div>
 
         <div class="top">
@@ -128,20 +128,20 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/images.jpg" alt="image for homepage">
+        <img src="images/Trabajos-para-estudiantes-de-ciencias-de-la-salud.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Subespecialists</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/fertilizacion-invitro.jpg" alt="image for page">
+        <img src="images/coronavirus-vaccine-lab-with-samples.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>contact</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
